[tool.poetry]
name = "double-probing-text-entailment"
version = "0.1.0"
description = ""
authors = ["lkwate <kwatedassiloic@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
transformers = {git = "https://github.com/huggingface/transformers"}
pandas = "^1.3.0"
torch = "^1.9.0"
torchaudio = "^0.9.0"
pytorch-lightning = "^1.3.8"
loguru = "^0.5.3"
black = "^21.7b0"
click = "^8.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
