[tool.poetry]
name = "double-probing-text-entailment"
version = "0.1.0"
description = ""
authors = ["lkwate <kwatedassiloic@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
transformers = {git = "https://github.com/huggingface/transformers"}
pandas = "^1.3.0"
torch = "^1.9.0"
torchaudio = "^0.9.0"
pytorch-lightning = "^1.3.8"
loguru = "^0.5.3"
black = "^21.7b0"
click = "^8.0.1"
spacy = "^3.1.3"
torch-scatter = "^2.0.8"
torch-sparse = "^0.6.12"
torch-cluster = "^1.5.9"
torch-spline-conv = "^1.2.1"
torch-geometric = "^2.0.1"
ipykernel = "^6.4.1"
torch-optimizer = "^0.1.0"
gensim = "^4.1.2"
stanford-corenlp = "^3.9.2"
nltk = "^3.6.5"
bitarray = "^2.3.5"
hydra-core = "^1.1.1"
omegaconf = "^2.1.1"
sacrebleu = "^2.0.0"
xmanager = "^0.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
